[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
noise = { version = "0.8.2", features = ["images"] }
rand = "0.8.4"
image = "0.24"
terrain_erosion = { path = "terrain_erosion" }